# astrabot

./: .bandit  .cursorignore  .env.example  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_STRUCTURE_ANALYSIS.md  README.md  analyze_signal_data.py  comprehensive_analysis.py  config.py  conversation_utilities.py  final_patterns.py  import.py  justfile  linguistic_patterns.py  notebook.ipynb  pyproject.toml  pytest.ini  requirements.txt  scratch.py  setup.cfg  structured_schemas.py  test_conversation_utilities.py  test_enhanced_processor.py  test_runner.py
.cursor/rules/: diataxis-documentation.mdc  privacy-architecture.mdc  project-docs-structure.mdc  tdd-guide.mdc
.github/workflows/: docs.yml  tests.yml
configs/: training_config.yaml
data/: signal_schema_analysis.md
docker/signalbackup-tools/: Dockerfile  LICENSE  README.md
docs/: development-roadmap.md  index.md  tdd-guide.md
docs/explanation/: architecture.md  privacy-architecture.md
docs/how-to/: code-quality.md  fine-tune-qwen3.md  maintain-dependencies.md  process-conversations.md  process-signal-backup.md  pyenv-setup.md
docs/reference/: api.md  conversation-schemas.md  emoji-analyzer.md  environment-variables.md  signal-data-schema.md  testing.md  utilities.md
docs/reference/api/: training-data-creator.md
docs/tutorials/: first-training-run.md  getting-started.md
notebooks/: 03_training_pipeline.ipynb  04_qwen3_training_pipeline.ipynb
scripts/: analyze_conversation_patterns.py  dev-setup.sh  emoji_usage_analyzer.py  evaluate.py  example-pyenv-script.py  export.py  extract_personality_markers.py  fix_linting_issues.sh  process_signal_data.py  setup-environment.sh  train.py  train_qwen3.py
scripts/old-analysis/: analyze_conversation_patterns.py  emoji_usage_analyzer.py  extract_personality_markers.py  final_patterns.py  topic_analysis.py
scripts/setup/: bootstrap.sh  setup-secrets.py  setup_linting.sh
src/: __init__.py
src/core/: __init__.py  conversation_analyzer.py  conversation_processor.py  conversation_processor_enhanced.py  emoji_analyzer.py  metadata_enricher.py  personality_profiler.py  qa_extractor.py  style_analyzer.py  topic_tracker.py
src/extractors/: __init__.py  twitter_extractor.py
src/llm/: __init__.py  adaptive_trainer.py  training_data_creator.py  training_formatter.py
src/llm/configs/: runpod-config.yaml
src/llm/prompts/: qwen3-ollama.txt
src/models/: __init__.py  conversation_schemas.py  schemas.py
src/utils/: __init__.py  config.py  logging.py  privacy_filter.py
test/: import.py  notebook.ipynb
tests/: README.md  conftest.py  test_conversation_utilities.py  test_structured_outputs.py  test_structured_schemas.py  test_utils_logging.py
tests/integration/: test_conversation_pipeline.py  test_enhanced_processor.py  test_privacy_pipeline.py
tests/unit/: test_adaptive_trainer.py  test_config.py  test_conversation_analyzer.py  test_conversation_processor.py  test_conversation_schemas.py  test_conversation_utilities.py  test_emoji_analyzer.py  test_metadata_enricher.py  test_personality_profiler.py  test_privacy_filter.py  test_qa_extractor.py  test_structured_outputs.py  test_structured_schemas.py  test_style_analyzer.py  test_topic_tracker.py  test_training_data_creator.py  test_twitter_extractor.py  test_utils_logging.py
utils/: __init__.py  logging.py
